# neural-world-model-robotics

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  requirements.txt
.github/workflows/: ci.yml
datasets/: ensemble_model.pkl  robot_experience.npz  world_model.pkl  world_transformer.pt
docs/: ROADMAP.md
models_pytorch/: dreamer_rssm.py  vae_encoder.py  world_transformer.py
results/: _drift.pkl  _stage2_state.pkl  _upgrade_state.pkl  benchmark_results.json
ros2_ws/world_model_node/: neural_mpc_node.py  package.xml  setup.py
scripts/: bench_chunk.py  bench_stage1_chunk.py  collect_sequence_data.py  diagnose_drift.py  make_architecture_diagram.py  make_demo_video.py  run_pipeline.py  run_stage.py  run_stage1_occupancy.py  run_stage2_benchmark.py  run_upgrade.py  train_world_transformer.py
src/nwm/env/: occupancy.py  simulator.py
src/nwm/models/: ensemble.py  transformer_wrapper.py  world_model.py
src/nwm/planners/: planners.py
tests/: smoke_test.py
